--- a/files/index.html
+++ b/files/index.html
@@ -6,7 +6,7 @@
     <title>Jie & Xin Website </title><img src="" alt="">
     <meta name="author" content="Jiege & Xinge">
     <style type="text/css">
-        @import"./style.css"; 
+        @import"../style.css"; 
         </style>
 </head>
 <body>
