--- a/files/index.html
+++ b/files/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="image/Logo.ico" type="image/x-icon">
+    <link rel="icon" href="image/Logo.ico" type="../image/x-icon">
     <meta charset="UTF-8">
     <title>Jie & Xin Website </title><img src="" alt="">
     <meta name="author" content="Jiege & Xinge">
