--- a/files/index.html
+++ b/files/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <index onclick="window.location.href='./index.html'" type="button" id="add">主页</index>
-    <download onclick="window.location.href='https://text.jiexin.fun/files/index.html'"type="button">下载</download>
+    <download onclick="window.location.href='./index.html'"type="button">下载</download>
     <chat onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
 </body>
 </html>
