--- a/chat.html
+++ b/chat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <link rel="icon" href="image/Logo.ico" type="image/x-icon">
     <meta charset="UTF-8">
