--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <link rel="icon" href="image/Logo.ico" type="image/x-icon">
     <meta charset="UTF-8">
@@ -8,11 +8,18 @@
     <link href="./style.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
         @import"./style.css"; 
+        header{
+                font-family: "comic sans ms";
+                text-shadow: 2px 2px 5px white;
+                font-size: 40px;
+                margin-left: 40%;
+                margin-right: auto;}
         </style>
 </head>
 <body>
     <index onclick="window.location.href='./index.html'" type="button" id="add">主页</index>
     <download onclick="window.location.href='./files/index.html'"type="button">下载</download>
     <chat onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
+    <header>JieXin新游戏开发网</header>
 </body>
 </html>
