--- a/index.html
+++ b/index.html
@@ -10,10 +10,29 @@
         @import"./style.css"; 
         header{
                 font-family: "comic sans ms";
-                text-shadow: 2px 2px 5px white;
+                text-shadow: 5px 5px 5px white;
                 font-size: 40px;
                 margin-left: 40%;
                 margin-right: auto;}
+        about{
+            background-color: rgba(136, 80, 255, 0);
+            color: black;
+            font-size: 1.2em;
+            font-weight: lighter;
+            border: none;
+            padding: 10px 20px;
+            margin-top: 20px;
+            cursor: pointer;
+            display: block;
+            margin: 0 auto;
+            position: absolute;
+           bottom: 0;
+            right: 0;
+        }
+        about:hover {
+        font-weight:bold;
+        color:black;
+        box-shadow: none 0px 0px 2px black;}
         </style>
 </head>
 <body>
@@ -21,5 +40,6 @@
     <download onclick="window.location.href='./files/index.html'"type="button">下载</download>
     <chat onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
     <header>JieXin新游戏开发网</header>
+    <about onclick="window.location.href='./about.html'"type="button">关于我们</about>
 </body>
 </html>
