--- a/chat.html
+++ b/chat.html
@@ -7,15 +7,36 @@
     <meta name="author" content="Jiege & Xinge">
     <link href="./style.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
-@import"./style.css"; 
+    h1{
+        color: black;
+        font-size: 40px;
+    }
+    h2{
+        color: black;
+    }
+    h3{
+        color:black;
+        font-size: 10px;
+    }
+    email{
+        font-family: comic sans ms;
+    }
+    qq{
+        font-family: comic sans ms;
+    }
     </style>
 </head>
 <body>
-    <index onclick="window.location.href='./index.html'" type="button" id="add">主页</index>
-    <download onclick="window.location.href='./files/index.html'"type="button">下载</download>
-    <chat onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
-    <qq></qq>
-    <email></email>
-    <discord><a href="https://discord.gg/ksUKTbRjna"></a><img src="./image/Discord.png" alt=""></discord>
+    <header_a>
+        <logo><img src="./image/logo.png" alt=""></logo>
+        <index onclick="window.location.href='./index.html'" type="button" id="add">主页</index>
+        <download onclick="window.location.href='./files/index.html'"type="button">下载</download>
+        <chat onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
+    </header_a>
+    <h1>与我们联系</h1>
+    <h2>Emai：<email>jielin3342@outlook.com</email>
+    </h2>
+    <h2>QQ：<qq>259931513</qq></h2>
+    <a href="https://discord.gg/ksUKTbRjna" target="_blank"><img src="image/Discord.png" alt="Join"></a>
 </body>
 </html>
