--- a/files/index.html
+++ b/files/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Jie & Xin Website </title><img src="" alt="">
     <meta name="author" content="Jiege & Xinge">
+    <link href="../style.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
-        @import"../style.css"; 
         header{
                 font-family: "comic sans ms";
                 text-shadow: 2px 2px 5px white;
@@ -16,9 +16,12 @@
         </style>
 </head>
 <body>
-    <index onclick="window.location.href='../index.html'" type="button" id="add">主页</index>
-    <download onclick="window.location.href='./index.html'"type="button">下载</download>
-    <chat onclick="window.location.href='../chat.html'"type="button">联系我们</chat>
+    <header_a>
+        <logo><img src="./image/logo.png" alt=""></logo>
+        <index onclick="window.location.href='../index.html'" type="button" id="add">主页</index>
+        <download onclick="window.location.href='./index.html'"type="button">下载</download>
+        <chat onclick="window.location.href='../chat.html'"type="button">联系我们</chat>
+    </header_a>
     <gm><a href="./game_files/greenman.zip"><img src="../image/g.png" alt=""></a></gm>
     <nj><a href="./game_files/Ninja GayDen.zip"><img src="../image/n.png" alt=""></a></nj>
 </body>
