--- a/index.html
+++ b/index.html
@@ -1,45 +1,37 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
+    <link rel="import" href="./default.html" type="html">
     <link rel="icon" href="image/Logo.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <title>Jie & Xin Website </title><img src="" alt="">
     <meta name="author" content="Jiege & Xinge">
     <link href="./style.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
-        @import"./style.css"; 
-        header{
+        title{
                 font-family: "comic sans ms";
                 text-shadow: 5px 5px 5px white;
                 font-size: 40px;
                 margin-left: 40%;
                 margin-right: auto;}
-        about{
-            background-color: rgba(136, 80, 255, 0);
-            color: black;
-            font-size: 1.2em;
-            font-weight: lighter;
-            border: none;
-            padding: 10px 20px;
-            margin-top: 20px;
-            cursor: pointer;
-            display: block;
-            margin: 0 auto;
-            position: absolute;
-           bottom: 0;
-            right: 0;
-        }
         about:hover {
         font-weight:bold;
         color:black;
         box-shadow: none 0px 0px 2px black;}
+        h1{
+            font-family: comic sans ms;
+            margin-left: 45%;
+            font-size: 50px;
+        }
         </style>
 </head>
 <body>
-    <index onclick="window.location.href='./index.html'" type="button" id="add">主页</index>
-    <download onclick="window.location.href='./files/index.html'"type="button">下载</download>
-    <chat onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
-    <header>JieXin新游戏开发网</header>
-    <about onclick="window.location.href='./about.html'"type="button">关于我们</about>
+    <header>
+        <logo><img src="./image/logo.png" alt=""></logo>
+        <index onclick="window.location.href='./index.html'" type="button" id="add">主页</index>
+        <download onclick="window.location.href='./files/index.html'"type="button">下载</download>
+        <chat onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
+    </header>
+    <h1>jiexin游戏团队</h1>
 </body>
 </html>
