--- a/upd.html
+++ b/upd.html
@@ -1,28 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <link rel="icon" href="image/Logo.ico" type="image/x-icon">
+    <link rel="icon" href="image/Logo.ico" type="../image/x-icon">
     <meta charset="UTF-8">
     <title>Jie & Xin Website </title><img src="" alt="">
     <meta name="author" content="Jiege & Xinge">
     <link href="./style.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
-        title{
-                font-family: "comic sans ms";
-                text-shadow: 5px 5px 5px white;
-                font-size: 40px;
-                margin-left: 40%;
-                margin-right: auto;}
-        about:hover {
-        font-weight:bold;
-        color:black;
-        box-shadow: none 0px 0px 2px black;}
-        h1{
-            font-family: comic sans ms;
-            margin-left: 45%;
-            font-size: 50px;
+        .xxx{
+            margin-left:40%;
         }
-        </style>
+    </style>
 </head>
 <body>
     <logo><img src="./image/logo.png" alt=""></logo>
@@ -30,10 +18,10 @@
         <index onclick="window.location.href='./index.html'" type="button">主页</index>
         <download onclick="window.location.href='./files/index.html'"type="button">下载</download>
         <chat onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
+        <h1 class="title">
+            我们对网站进行了更新
+        </h1>
+        <xxx class="xxx">2023.6.17</xxx>
     </header>
-    <h1>JieXin Game</h1>
-    <upd class="upd">
-        <upd_title class="title">测试版更新</upd_title>
-    </upd>
 </body>
 </html>
