--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         </style>
 </head>
 <body>
+    <div id="background-scroll">
+    <div id="bg1"></div>
+    <div id="bg2"></div>
+    <div id="bg3"></div>
+    <div id="bg4"></div>
+    <div id="bg5"></div>
+    <div id="bg6"></div>
+</div>
     <logo><img src="./image/logo.png" alt=""></logo>
     <header>
         <index onclick="window.location.href='./index.html'" type="button">主页</index>
