--- a/chat.html
+++ b/chat.html
@@ -27,6 +27,14 @@
     </style>
 </head>
 <body>
+    <div id="background-scroll">
+        <div id="bg1"></div>
+        <div id="bg2"></div>
+        <div id="bg3"></div>
+        <div id="bg4"></div>
+        <div id="bg5"></div>
+        <div id="bg6"></div>
+    </div>  
     <header_a>
         <logo><img src="./image/logo.png" alt=""></logo>
         <index onclick="window.location.href='./index.html'" type="button" id="add">主页</index>
