--- a/chat.html
+++ b/chat.html
@@ -42,7 +42,7 @@
         <chat onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
     </header_a>
     <h1>与我们联系</h1>
-    <h2>Emai：<email>jielin3342@outlook.com</email>
+    <h2>Emai：<email>jiege@jiexin.fun</email>
     </h2>
     <h2>QQ：<qq>259931513</qq></h2>
     <a href="https://discord.gg/ksUKTbRjna" target="_blank"><img src="image/Discord.png" alt="Join"></a>
