--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 </div>
     <logo><img src="./image/logo.png" alt=""></logo>
     <header>
-        <index onclick="window.location.href='./index.html'" type="button">主页</index>
-        <download onclick="window.location.href='./files/index.html'"type="button">下载</download>
-        <chat onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
+        <index class="header" onclick="window.location.href='./index.html'" type="button">主页</index>
+        <download class="header" onclick="window.location.href='./files/index.html'"type="button">下载</download>
+        <chat class="header" onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
+        <donate class="header" onclick="window.location.href='../'"type="button">投喂</donate>
     </header>
     <h1>JieXin Game</h1>
     </upd>
