--- a/chat.html
+++ b/chat.html
@@ -34,13 +34,15 @@
         <div id="bg4"></div>
         <div id="bg5"></div>
         <div id="bg6"></div>
-    </div>  
-    <header_a>
+    </div>
+    <logo><img src="./image/logo.png" alt=""></logo>
+    <header>
         <logo><img src="./image/logo.png" alt=""></logo>
-        <index onclick="window.location.href='./index.html'" type="button" id="add">主页</index>
-        <download onclick="window.location.href='./files/index.html'"type="button">下载</download>
-        <chat onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
-    </header_a>
+        <index class="header" onclick="window.location.href='./index.html'" type="button" id="add">主页</index>
+        <download class="header" onclick="window.location.href='./files/index.html'"type="button">下载</download>
+        <chat class="header" onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
+        <donate class="header" class="header" onclick="window.location.href='../'"type="button">投喂</donate>
+    </header>
     <h1>与我们联系</h1>
     <h2>Emai：<email>jiege@jiexin.fun</email>
     </h2>
