--- a/files/index.html
+++ b/files/index.html
@@ -23,13 +23,14 @@
         <div id="bg4"></div>
         <div id="bg5"></div>
         <div id="bg6"></div>
-    </div>    
-    <header_a>
-        <logo><img src="./image/logo.png" alt=""></logo>
-        <index onclick="window.location.href='../index.html'" type="button" id="add">主页</index>
-        <download onclick="window.location.href='./index.html'"type="button">下载</download>
-        <chat onclick="window.location.href='../chat.html'"type="button">联系我们</chat>
-    </header_a>
+    </div>  
+    <logo><img src="./image/logo.png" alt=""></logo>  
+    <header>
+        <index class="header" onclick="window.location.href='../index.html'" type="button" id="add">主页</index>
+        <download class="header" onclick="window.location.href='./index.html'"type="button">下载</download>
+        <chat class="header" onclick="window.location.href='../chat.html'"type="button">联系我们</chat>
+        <donate class="header" onclick="window.location.href='../'"type="button">投喂</donate>
+    </header>
     <gm><a href="./game_files/greenman.zip"><img src="../image/g.png" alt=""></a></gm>
     <nj><a href="./game_files/Ninja GayDen.zip"><img src="../image/n.png" alt=""></a></nj>
 </body>
