--- a/files/index.html
+++ b/files/index.html
@@ -20,9 +20,9 @@
     </div>  
     <logo><img src="./image/logo.png" alt=""></logo>  
     <header>
-        <index class="header" onclick="window.location.href='../index.html'" type="button" id="add">主页</index>
-        <download class="header" onclick="window.location.href='./index.html'"type="button">下载</download>
-        <chat class="header" onclick="window.location.href='../chat.html'"type="button">联系我们</chat>
+        <index class="header" onclick="window.location.href='./index.html'" type="button">主页</index>
+        <download class="header" onclick="window.location.href='./files/index.html'"type="button">下载</download>
+        <chat class="header" onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
         <donate class="header" onclick="window.location.href='../'"type="button">投喂</donate>
     </header>
     <gm><a href="./game_files/greenman.zip"><img src="../image/g.png" alt=""></a></gm>
