--- a/chat.html
+++ b/chat.html
@@ -19,10 +19,10 @@
         font-size: 10px;
     }
     email{
-        font-family: comic sans ms;
+        font-family: comic;
     }
     qq{
-        font-family: comic sans ms;
+        font-family: comic;
     }
     </style>
 </head>
