--- a/donate.html
+++ b/donate.html
@@ -13,7 +13,7 @@
         <index class="header" onclick="window.location.href='./index.html'" type="button">主页</index>
         <download class="header" onclick="window.location.href='./files/index.html'"type="button">下载</download>
         <chat class="header" onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
-        <donate class="header" onclick="window.location.href='../'"type="button">投喂</donate>
+        <donate class="header" onclick="window.location.href='./donate.html'"type="button">投喂</donate>
     </header>
     </upd>
 </body>
