--- a/files/index.html
+++ b/files/index.html
@@ -11,7 +11,7 @@
     <img src="./image/logo.png" alt="">
     <header class="glow">
         <index class="header" onclick="window.location.href='../index.html'" type="button">主页</index>
-        <download class="header" onclick="window.location.href='./files/index.html'"type="button">下载</download>
+        <download class="header" onclick="window.location.href='./index.html'"type="button">下载</download>
         <chat class="header" onclick="window.location.href='../chat.html'"type="button">联系我们</chat>
         <donate class="header" onclick="window.location.href='../donate.html'"type="button">投喂</donate>
     </header>
