--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
+    <script src="./js/js.js"></script>
     <link rel="icon" href="image/Logo.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <title>JieXin Game</title><img src="" alt="">
@@ -8,22 +9,29 @@
     <link href="./style.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
         h1{
-            text-shadow: 5px 5px 10px;
-            text-align: center;            
-            font-family: "comic sans ms";
-            font-size: 50px;
+            font-family: comic;
+            color: #fff;
+            text-shadow: 0 0 10px #9ff5ff, 0 0 20px #9ff5ff, 0 0 30px #9ff5ff, 0 0 40px #ffffff, 0 0 70px #9ff5ff, 0 0 80px #ffffff, 0 0 100px #9ff5ff, 0 0 150px #9ff5ff;
+            text-align: center;
+        }
+       .img{
+            border-radius: 50%;
         }
         </style>
 </head>
 <body>
-    <logo><img src="./image/logo.png" alt=""></logo>
+    <logo class="none"><img src="./image/logo.png" alt=""></logo>
     <header>
         <index class="header" onclick="window.location.href='./index.html'" type="button">主页</index>
         <download class="header" onclick="window.location.href='./files/index.html'"type="button">下载</download>
         <chat class="header" onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
         <donate class="header" onclick="window.location.href='./donate.html'"type="button">投喂</donate>
     </header>
-    <h1 class="glow">JieXin Game</h1>
-    </upd>
+    <h1>JieXin Game</h1>
+    <h2><pre>
+    <bilibili>传送门
+        <xinge><a href="https://space.bilibili.com/507645564?spm_id_from=333.337.0.0" target="_blank"><img src="./image/8d51ea4b6df472998823616b93cd8d7fcda00e4b.jpg@240w_240h_1c_1s_!web-avatar-space-header.png" alt="" class="img"></xinge> <jie><a href="https://space.bilibili.com/1144126402?spm_id_from=333.1007.0.0" target="_blank"><img src="./image/jie.jpg" alt=""class="img"></jie>
+    </bilibili></pre>
+    </h2>
 </body>
 </html>
