--- a/chat.html
+++ b/chat.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <logo><img src="./image/logo.png" alt=""></logo>
+    <logo><img class="logo" src="./image/logo.png" alt=""></logo>
     <header>
         <index class="header" onclick="window.location.href='./index.html'" type="button" id="add">主页</index>
         <download class="header" onclick="window.location.href='./files/index.html'"type="button">下载</download>
