--- a/donate.html
+++ b/donate.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <title>JieXin Game</title><img src="" alt="">
     <meta name="author" content="Jiege & Xinge">
-    <link href="./style.css" rel="stylesheet" type="text/css"/>
+    <link href="./style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <logo><img src="./image/logo.png" alt=""></logo>
+    <logo><img class="logo" src="./image/logo.png" alt=""></logo>
     <header>
         <index class="header" onclick="window.location.href='./index.html'" type="button">主页</index>
         <download class="header" onclick="window.location.href='./files/index.html'"type="button">下载</download>
