--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </style>
 </head>
 <body>
-    <logo class="none"><img src="./image/logo.png" alt=""></logo>
+    <logo class="none"><img  class="logo"src="./image/logo.png" alt=""></logo>
     <header>
         <index class="header" onclick="window.location.href='./index.html'" type="button">主页</index>
         <download class="header" onclick="window.location.href='./files/index.html'"type="button">下载</download>
