--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         }
        .img{
             border-radius: 50%;
+            border-right: 2px solid white;
+            border-bottom: 2px solid white;
+            border-left: 3px solid #000;
+            border-top: 3px solid #000;
         }
         </style>
 </head>
@@ -28,10 +32,10 @@
         <donate class="header" onclick="window.location.href='./donate.html'"type="button">投喂</donate>
     </header>
     <h1>JieXin Game</h1>
-    <h2><pre>
+    <h2>
     <bilibili>传送门
         <xinge><a href="https://space.bilibili.com/507645564?spm_id_from=333.337.0.0" target="_blank"><img src="./image/8d51ea4b6df472998823616b93cd8d7fcda00e4b.jpg@240w_240h_1c_1s_!web-avatar-space-header.png" alt="" class="img"></xinge> <jie><a href="https://space.bilibili.com/1144126402?spm_id_from=333.1007.0.0" target="_blank"><img src="./image/jie.jpg" alt=""class="img"></jie>
-    </bilibili></pre>
+    </bilibili>
     </h2>
 </body>
 </html>
