--- a/chat.html
+++ b/chat.html
@@ -35,7 +35,7 @@
         <donate class="header" onclick="window.location.href='./donate.html'"type="button">投喂</donate>
     </header>
     <h1>与我们联系</h1>
-    <h2>Emai：<email>jiege@jiexin.fun</email>
+    <h2>Emai：<email>return@jiexin.fun</email>
     </h2>
     <h2>QQ：<qq>259931513</qq></h2>
     <a href="https://discord.gg/ksUKTbRjna" target="_blank"><img src="image/Discord.png" alt="Join"></a>
