--- a/donate.html
+++ b/donate.html
@@ -6,6 +6,16 @@
     <title>JieXin Game</title><img src="" alt="">
     <meta name="author" content="Jiege & Xinge">
     <link href="./style.css" rel="stylesheet" type="text/css">
+    <style>
+        span{
+            top: 50%;
+            font-size: 20px;
+        }
+        button{
+            background-color: rgba(0, 0, 0, 0);
+            border-radius: 20px;
+        }
+    </style>
 </head>
 <body>
     <logo><img class="logo" src="./image/logo.png" alt=""></logo>
@@ -15,6 +25,6 @@
         <chat class="header" onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
         <donate class="header" onclick="window.location.href='./donate.html'"type="button">投喂</donate>
     </header>
-    </upd>
+    <aifadian onclick="window.location.href='http:\\\\afdian.net/a/jiexinteam' "type="button"><img src="./image/aifadian.png" alt=""><span>爱发电</span></aifadian>
 </body>
 </html>
