--- a/files/index.html
+++ b/files/index.html
@@ -6,6 +6,14 @@
     <title>JieXin Game</title><img src="" alt="">
     <meta name="author" content="Jiege & Xinge">
     <link href="../style.css" rel="stylesheet" type="text/css"/>
+    <style>
+        .pvz{
+            background-image:linear-gradient(
+                #FFF476,#A15727
+            );
+            border-radius: 20px;
+        }
+    </style>
 </head>
 <body>
     <header class="glow">
@@ -16,5 +24,6 @@
     </header>
     <gm><a href="./game_files/greenman.zip"><img src="../image/g.png" alt=""></a></gm>
     <nj><a href="./game_files/Ninja GayDen.zip"><img src="../image/n.png" alt=""></a></nj>
+    <pvz><a href="./game_files/pvz.zip"><img class="pvz" src="../image/pvz.png" alt=""></a></pvz>
 </body>
 </html>
