--- a/donate.html
+++ b/donate.html
@@ -6,6 +6,7 @@
     <title>JieXin Game</title><img src="" alt="">
     <meta name="author" content="Jiege & Xinge">
     <link href="./style.css" rel="stylesheet" type="text/css">
+    <script src="JavaScript/Global.js"></script>
     <style>
         span{
             top: 50%;
@@ -14,6 +15,10 @@
         button{
             background-color: rgba(0, 0, 0, 0);
             border-radius: 20px;
+        }
+        aifadian{
+            top: 150px;
+            left: 20px;
         }
     </style>
 </head>
@@ -25,6 +30,7 @@
         <chat class="header" onclick="window.location.href='./chat.html'"type="button">联系我们</chat>
         <donate class="header" onclick="window.location.href='./donate.html'"type="button">投喂</donate>
     </header>
+
     <aifadian onclick="window.location.href='http:\\\\afdian.net/a/jiexinteam' "type="button"><img src="./image/aifadian.png" alt=""><span>爱发电</span></aifadian>
 </body>
 </html>
